  * merge spawn-fcgi changes from trunk (from @2191)
  * let spawn-fcgi propagate exit code from spawned fcgi application
  * close connection after redirect in trigger_b4_dl (thx icy)
  * close connection in mod_magnet if returned status code
  * fix bug with IPv6 in mod_evasive (#1579)
  * fix scgi HTTP/1.* status parsing (#1638), found by met@uberstats.com

- 1.4.19 - 2008-03-10

  * added support for If-Range: <date> (#1346)
  * added support for matching $HTTP["scheme"] in configs
  * fixed initgroups() called after chroot (#1384)
  * fixed case-sensitive check for Auth-Method (#1456)
  * execute fcgi app without /bin/sh if used as argument to spawn-fcgi (#1428)
  * fixed a bug that made /-prefixed extensions being handled also when
    matching the end of the uri in fcgi,scgi and proxy modules (#1489)
  * print error if X-LIGHTTPD-send-file cannot be done; reset header
    Content-Length for send-file. Patches by Stefan Buehler
  * prevent crash in certain php-fcgi configurations (#841)
  * add IdleServers and Scoreboard directives in ?auto mode for mod_status (#1507)
  * open log immediately after daemonizing, fixes SIGPIPEs on startup  (#165)
  * HTTPS env var should be "on" when using mod_extforward and the X-Forwarded-Proto header is set. (#1499)
  * generate ETag and Last-Modified headers for mod_ssi based on newest modified include (#1491)
  * support letterhomes in mod_userdir (#1473)
  * support chained proxies in mod_extforward (#1528)
  * fixed bogus "cgi died ?" if we kill the CGI process on shutdown
  * fixed ECONNRESET handling in network-openssl
  * fixed handling of EAGAIN in network-linux-sendfile (#657)
  * reset conditional cache (#1164)
  * create directories in mod_compress (was broken with alias/userdir) (#1027)
  * fixed out of range access in fd array (#1562, #372) (CVE-2008-0983)
  * mod_compress should check if the request is already handled, e.g. by fastcgi (#1565)